
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int errx (int,char*) ;
 int execl (char*,char*,int *) ;
 int exit (int ) ;
 int printf (char*) ;
 scalar_t__ setuid (int ) ;

__attribute__((used)) static void dropshell()
{
 if (setuid(0) != 0)
  errx(1, "failed");

 printf("Launching shell\n");

 execl("/bin/sh", "sh", ((void*)0));
 exit(0);
}
